tests/neg/i1670.scala
class A(a:Int, b:Int) extends AnyVal // error: value class needs to have exactly one val parameter
